alignments fixed

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -98,7 +98,9 @@ body {
     font-family: "Figtree";
     font-style: normal;
     font-weight: 500;
+    font-size: 20px;
     color: #525252;
+    // background-color: antiquewhite;
     margin-top: 24px;
     margin-bottom: 50px;
     div {
@@ -127,11 +129,9 @@ body {
 }
 
 .tableSection {
+    // background-color: rgb(173, 242, 242);
     display: flex;
     flex-direction: column;
-    // background-color: #ec3683;
-    // justify-content: center;
-    // align-items: center;
     #packages {
         font-family: "Figtree";
         font-style: normal;
@@ -140,39 +140,67 @@ body {
         line-height: 38px;
         text-align: center;
         color: #1e1e1e;
-        margin-bottom: 40px;
     }
-}
-
-@media only screen and (max-width: 700px) {
-    .navbar-collapse {
-        background: #ffffff;
-        a {
-            color: #525252;
+    .tables {
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        gap: 24px;
+        @media screen and (max-width: 576px) {
+            flex-direction: column;
+        }
+        @media screen and (min-width: 1200px) {
+            justify-content: center;
         }
     }
 }
 
-.tablesList {
-    margin-left: 100px;
-}
-
-.modelsSection {
+.shop {
+    p {
+        margin: 0;
+        font-family: "Figtree";
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
+        text-align: center;
+        color: #1e1e1e;
+    }
     display: flex;
-    flex-direction: column;
-    // justify-content: flex-start;
-    // align-items: center;
-    // background-color: aqua;
-    .shop {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 150px;
+    margin-bottom: 50px;
+    @media screen and (max-width: 400px) {
+        button {
+            display: none;
+        }
+    }
+    @media screen and (min-width: 1200px) {
+        gap: 60px;
     }
 }
 
-// #reservelg {
-//     display: none;
-//     @media only screen and (min-width: 400px) {
-//         display: block;
-//     }
-// }
+.modelSection {
+    // background-color: rgb(191, 144, 144);
+    display: flex;
+    flex-direction: column;
+    .models {
+        display: flex;
+        flex-direction: row;
+        overflow-x: scroll;
+        gap: 24px;
+        @media screen and (max-width: 576px) {
+            .models {
+                gap: 8px;
+            }
+            img {
+                width: 160px;
+            }
+        }
+        @media screen and (min-width: 1200px) {
+            justify-content: center;
+        }
+    }
+}
